# tokei-tar

./: Cargo.toml  README.md
src/: main.rs
