[package]
name = "tokei-tar"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tar = "0.4.40"
tokei = { git = "https://github.com/XAMPPRocky/tokei", tag="v13.0.0-alpha.1" }
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
