[package]
name = "tokei-tar"
version = "0.2.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
tar = "0.4.44"
tokei = { git = "https://github.com/XAMPPRocky/tokei", branch = "master", default-features = false }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
